[gd_scene load_steps=46 format=3 uid="uid://dtw2ryuq7qccr"]

[ext_resource type="PhysicsMaterial" uid="uid://deru0wsiqkst8" path="res://physics/Physics_Player.tres" id="1_i385w"]
[ext_resource type="Script" uid="uid://yb1i0a0y66rt" path="res://crafts/_scripts/movement.gd" id="2_7q1yc"]
[ext_resource type="Script" uid="uid://8tg4e14ivtgv" path="res://crafts/_scripts/craftHandler.gd" id="2_xvib7"]
[ext_resource type="Script" uid="uid://dtrpt8cs6e8my" path="res://crafts/_scripts/health.gd" id="3_oyk35"]
[ext_resource type="Script" uid="uid://d1bi718txrp68" path="res://crafts/_scripts/hud_load_out.gd" id="4_3kdrp"]
[ext_resource type="Script" uid="uid://cnnibedva1das" path="res://crafts/scenes/power_node.gd" id="5_f4kjo"]
[ext_resource type="Resource" uid="uid://b81ye6ku6fkri" path="res://weapons/Weapons/settings/Player/Primary/Laser Epoc I.tres" id="5_kq7js"]
[ext_resource type="Resource" uid="uid://c3vsg1qxxphtm" path="res://weapons/Weapons/settings/Player/Primary/Laser Epoc II.tres" id="6_36rey"]
[ext_resource type="Script" uid="uid://coaxxnt1ixodw" path="res://crafts/_scripts/weapons.gd" id="6_b3syv"]
[ext_resource type="Script" uid="uid://3xfu46xouwtr" path="res://weapons/mines/_scripts/mine_layer.gd" id="7_13tq5"]
[ext_resource type="AudioStream" uid="uid://bwfy6ingfuh6w" path="res://sounds/Engine_Sounds/vehicle.mp3" id="7_47n7s"]
[ext_resource type="Resource" uid="uid://b216wfbjy07kt" path="res://weapons/Weapons/settings/Player/Primary/Laser Epoc III.tres" id="7_xs0lb"]
[ext_resource type="Resource" uid="uid://cbsq5o18qxf7s" path="res://weapons/Weapons/settings/Player/Secondary/01_Concussion.tres" id="8_18gg5"]
[ext_resource type="Resource" uid="uid://dnycohsen20am" path="res://weapons/Weapons/settings/Player/Primary/Laszer Epoc VI.tres" id="8_36rey"]
[ext_resource type="Script" uid="uid://bg1jt1tycss7a" path="res://crafts/_scripts/turret.gd" id="8_b3syv"]
[ext_resource type="Resource" uid="uid://08uoet60fxri" path="res://weapons/Weapons/settings/Player/Primary/Rail gun.tres" id="9_18gg5"]
[ext_resource type="Resource" uid="uid://dc2u5ownbgxgn" path="res://weapons/Weapons/settings/Player/Secondary/02_Detno.tres" id="9_qy8du"]
[ext_resource type="Script" uid="uid://b55vvu107vcdx" path="res://crafts/_scripts/shoot.gd" id="9_udstk"]
[ext_resource type="Resource" uid="uid://dbm32m6ijqxq6" path="res://weapons/mines/settings/detno.tres" id="10_7i1d4"]
[ext_resource type="Script" uid="uid://btaj1tkgqd8td" path="res://crafts/scenes/radar_detection.gd" id="10_ygnyq"]
[ext_resource type="Resource" uid="uid://2h0bqk3l5qm5" path="res://weapons/mines/settings/Manhattan.tres" id="11_x4vel"]
[ext_resource type="Resource" uid="uid://do5a4ht3q81vj" path="res://weapons/Weapons/settings/Player/Secondary/Repulsor.tres" id="11_xs0lb"]
[ext_resource type="PackedScene" uid="uid://dvg1xndyw5s0x" path="res://weapons/Weapons/scenes/target.tscn" id="12_x3mei"]
[ext_resource type="Material" uid="uid://cexmtab463ixe" path="res://materials/_shaders/texture_rect_scroll.tres" id="18_6p3s6"]
[ext_resource type="Resource" uid="uid://dtdwlw4non2v" path="res://crafts/settings/aegis.tres" id="18_wntiw"]
[ext_resource type="Resource" uid="uid://b4fqomw6p4nuw" path="res://crafts/settings/gryff.tres" id="19_xl0w8"]
[ext_resource type="Resource" uid="uid://c1jq67mkdfbhr" path="res://crafts/settings/morrigan.tres" id="20_5g0l5"]
[ext_resource type="Resource" uid="uid://02f5l0dqfse1" path="res://crafts/settings/paladin.tres" id="21_oyk35"]
[ext_resource type="Resource" uid="uid://d4k3qpj2ry12x" path="res://crafts/settings/taranis.tres" id="22_47n7s"]
[ext_resource type="Resource" uid="uid://bngghqua1pcwd" path="res://weapons/Weapons/settings/Player/Secondary/Shaper.tres" id="23_jfeuh"]
[ext_resource type="Resource" uid="uid://cba5kxxfngldi" path="res://weapons/mines/settings/General_issue_mine.tres" id="23_vc6ja"]
[ext_resource type="Texture2D" uid="uid://dlxlseslsf4hk" path="res://UI/images/space.jpg" id="24_wntiw"]
[ext_resource type="Script" uid="uid://cqlplatgelxtm" path="res://crafts/_scripts/cross_hairs.gd" id="30_aima4"]
[ext_resource type="Texture2D" uid="uid://qutelkvv70on" path="res://weapons/Weapons/icons/concussion.png" id="32_4udya"]
[ext_resource type="Script" uid="uid://ccm74xhp02i3o" path="res://crafts/_scripts/hud_graphics.gd" id="32_jun1v"]
[ext_resource type="Script" uid="uid://bgxqo6x1mu565" path="res://crafts/_scripts/speedometer.gd" id="33_vc6ja"]
[ext_resource type="Script" uid="uid://iknp0sirk21s" path="res://crafts/scenes/stats.gd" id="33_xlb3y"]
[ext_resource type="Texture2D" uid="uid://khegx87i6osl" path="res://UI/images/red_corner_badge.png" id="34_cfqyc"]
[ext_resource type="Script" uid="uid://biopu4j668hyb" path="res://crafts/_scripts/powermeter.gd" id="34_vbce2"]
[ext_resource type="Texture2D" uid="uid://cwc2lys74adfb" path="res://UI/images/Circle_(transparent).png" id="36_bac3s"]
[ext_resource type="Script" uid="uid://75e54gt5b1vk" path="res://crafts/_scripts/icons.gd" id="37_cy36v"]
[ext_resource type="Texture2D" uid="uid://bgpnqyjxxlqii" path="res://UI/images/bezel_progress_vert.png" id="41_ywcr7"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_u3nip"]
points = PackedVector3Array(0.3, 0.15, 0.8, 0.3, -0.15, 0.8, 0.3, 0.15, -0.8, -0.3, 0.15, 0.8, -0.3, -0.15, 0.8, 0.3, -0.15, -0.8, -0.3, 0.15, -0.8, -0.3, -0.15, -0.8)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_i385w"]
points = PackedVector3Array(0.3025, 0.005, 0.8025, 0.3025, -0.005, 0.8025, 0.3025, 0.005, -0.8025, -0.3025, 0.005, 0.8025, -0.3025, -0.005, 0.8025, 0.3025, -0.005, -0.8025, -0.3025, 0.005, -0.8025, -0.3025, -0.005, -0.8025)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_jfeuh"]
height = 50.0
radius = 50.0

[node name="Vehicle_Main" type="RigidBody3D" node_paths=PackedStringArray("old_collider", "old_ground_check") groups=["Player"]]
collision_mask = 1022
physics_material_override = ExtResource("1_i385w")
center_of_mass_mode = 1
center_of_mass = Vector3(0, -0.15, 0)
sleeping = true
can_sleep = false
continuous_cd = true
contact_monitor = true
max_contacts_reported = 5
script = ExtResource("2_xvib7")
old_collider = NodePath("Collider")
old_ground_check = NodePath("GroundCheck/Collider")

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.15, 0)
shape = SubResource("ConvexPolygonShape3D_u3nip")

[node name="GroundCheck" type="Area3D" parent="."]
collision_mask = 1022

[node name="Collider" type="CollisionShape3D" parent="GroundCheck"]
shape = SubResource("ConvexPolygonShape3D_i385w")

[node name="health_node" type="Node3D" parent="." node_paths=PackedStringArray("hud_shields", "hud_armor", "hud_health", "hud_draw_target", "icon_node")]
script = ExtResource("3_oyk35")
hud_shields = NodePath("../Hud_inGame/lbl_shields")
hud_armor = NodePath("../Hud_inGame/lbl_armor")
hud_health = NodePath("../Hud_inGame/lbl_health")
hud_draw_target = NodePath("../Hud_inGame/Defence")
icon_node = NodePath("../Hud_inGame/Icons")

[node name="movement_node" type="Node3D" parent="."]
script = ExtResource("2_7q1yc")
engine_audio_path = NodePath("../Engine Sound")

[node name="power_node" type="Node3D" parent="." node_paths=PackedStringArray("powermeter_graphic", "icon_node")]
script = ExtResource("5_f4kjo")
powermeter_graphic = NodePath("../Hud_inGame/Power")
icon_node = NodePath("../Hud_inGame/Icons")

[node name="weapons_node" type="Node3D" parent="."]
script = ExtResource("6_b3syv")

[node name="mine_node" type="Node3D" parent="."]
script = ExtResource("7_13tq5")

[node name="Engine Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_47n7s")
autoplay = true

[node name="Turret" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0.125)
script = ExtResource("8_b3syv")

[node name="RadarDetection" type="Area3D" parent="Turret" node_paths=PackedStringArray("radar_ui", "collider", "lbl_zoom_factor")]
disable_mode = 2
collision_mask = 2147484670
script = ExtResource("10_ygnyq")
radar_ui = NodePath("../../Hud_inGame/Radar")
collider = NodePath("Collider")
lbl_zoom_factor = NodePath("../../Hud_inGame/Radar/lbl_soom_factor")

[node name="Collider" type="CollisionShape3D" parent="Turret/RadarDetection"]
shape = SubResource("CylinderShape3D_jfeuh")

[node name="Barrel" type="MeshInstance3D" parent="Turret"]
skeleton = NodePath("../..")
script = ExtResource("9_udstk")
target_scene = ExtResource("12_x3mei")

[node name="Camera3D" type="Camera3D" parent="Turret/Barrel"]

[node name="TargetCast" type="RayCast3D" parent="Turret/Barrel"]
target_position = Vector3(0, 0, -10000)
collision_mask = 1022

[node name="MineCast" type="RayCast3D" parent="Turret"]
collision_mask = 2

[node name="Hud_loadOut" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_3kdrp")
LaserSettings = Array[Resource]([ExtResource("5_kq7js"), ExtResource("6_36rey"), ExtResource("7_xs0lb"), ExtResource("8_36rey"), ExtResource("9_18gg5")])
MissileSettings = Array[Resource]([ExtResource("8_18gg5"), ExtResource("11_xs0lb"), ExtResource("9_qy8du"), ExtResource("23_jfeuh")])
mineSettings = Array[Resource]([ExtResource("23_vc6ja"), ExtResource("10_7i1d4"), ExtResource("11_x4vel")])
craftSettings = Array[Resource]([ExtResource("18_wntiw"), ExtResource("19_xl0w8"), ExtResource("20_5g0l5"), ExtResource("21_oyk35"), ExtResource("22_47n7s")])

[node name="Background" type="TextureRect" parent="Hud_loadOut"]
material = ExtResource("18_6p3s6")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("24_wntiw")
expand_mode = 1
stretch_mode = 1

[node name="WeaponChooser" type="PanelContainer" parent="Hud_loadOut"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 444.0
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Hud_loadOut/WeaponChooser"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Hud_loadOut/WeaponChooser/MarginContainer"]
layout_mode = 2

[node name="lbl_laser" type="Label" parent="Hud_loadOut/WeaponChooser/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Energy based weapons"

[node name="opt_lasers" type="ItemList" parent="Hud_loadOut/WeaponChooser/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 235)
layout_mode = 2
fixed_icon_size = Vector2i(32, 32)

[node name="lbl_missile" type="Label" parent="Hud_loadOut/WeaponChooser/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Projectiles"

[node name="opt_missiles" type="ItemList" parent="Hud_loadOut/WeaponChooser/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 235)
layout_mode = 2
fixed_icon_size = Vector2i(32, 32)

[node name="lbl_mines" type="Label" parent="Hud_loadOut/WeaponChooser/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Land mines"

[node name="opt_mines" type="ItemList" parent="Hud_loadOut/WeaponChooser/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 235)
layout_mode = 2
fixed_icon_size = Vector2i(32, 32)

[node name="lbl_specials" type="Label" parent="Hud_loadOut/WeaponChooser/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Specials"

[node name="opt_specials" type="ItemList" parent="Hud_loadOut/WeaponChooser/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 235)
layout_mode = 2
fixed_icon_size = Vector2i(32, 32)

[node name="VehicleChooser" type="PanelContainer" parent="Hud_loadOut"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -298.0
offset_right = 298.0
offset_bottom = 320.0
grow_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="Hud_loadOut/VehicleChooser"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Hud_loadOut/VehicleChooser/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Hud_loadOut/VehicleChooser/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Previous" type="Button" parent="Hud_loadOut/VehicleChooser/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "<<"

[node name="VBoxContainer" type="VBoxContainer" parent="Hud_loadOut/VehicleChooser/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="img_craft" type="TextureRect" parent="Hud_loadOut/VehicleChooser/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(467, 270)
layout_mode = 2
expand_mode = 1
stretch_mode = 6

[node name="lbl_craft_name" type="Label" parent="Hud_loadOut/VehicleChooser/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Vehicle name"
horizontal_alignment = 1

[node name="Next" type="Button" parent="Hud_loadOut/VehicleChooser/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = ">>"

[node name="HSeparator" type="HSeparator" parent="Hud_loadOut/VehicleChooser/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="lbl_lore" type="Label" parent="Hud_loadOut/VehicleChooser/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
autowrap_mode = 3

[node name="pnl_lore" type="PanelContainer" parent="Hud_loadOut"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -270.0
offset_bottom = -120.0
grow_horizontal = 0
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Hud_loadOut/pnl_lore"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Hud_loadOut/pnl_lore/MarginContainer"]
layout_mode = 2

[node name="txt_pri_title" type="LineEdit" parent="Hud_loadOut/pnl_lore/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="txt_pri_lore" type="TextEdit" parent="Hud_loadOut/pnl_lore/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
wrap_mode = 1

[node name="HSeparator" type="HSeparator" parent="Hud_loadOut/pnl_lore/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="txt_sec_title" type="LineEdit" parent="Hud_loadOut/pnl_lore/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="txt_sec_lore" type="TextEdit" parent="Hud_loadOut/pnl_lore/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
wrap_mode = 1

[node name="HSeparator2" type="HSeparator" parent="Hud_loadOut/pnl_lore/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="txt_mine_title" type="LineEdit" parent="Hud_loadOut/pnl_lore/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="txt_mine_lore" type="TextEdit" parent="Hud_loadOut/pnl_lore/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
wrap_mode = 1

[node name="btn_enter_game" type="Button" parent="Hud_loadOut"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -309.0
offset_top = -91.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
text = "Enter level"

[node name="Hud_inGame" type="Control" parent="." node_paths=PackedStringArray("score_label", "falls_label", "vanquishes_label", "level_label", "p_bar", "r_bar")]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("33_xlb3y")
score_label = NodePath("lbl_score")
falls_label = NodePath("lbl_falls")
vanquishes_label = NodePath("lbl_vanquishes")
level_label = NodePath("lbl_level")
p_bar = NodePath("prg_level")
r_bar = NodePath("Resource_Monitor/prg_resource")

[node name="keymap" type="TextureRect" parent="Hud_inGame"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Radar" type="Control" parent="Hud_inGame"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -310.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 310.0
grow_horizontal = 0

[node name="TextureRect" type="TextureRect" parent="Hud_inGame/Radar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("36_bac3s")
expand_mode = 1

[node name="lbl_soom_factor" type="Label" parent="Hud_inGame/Radar"]
layout_mode = 0
offset_right = 66.0
offset_bottom = 23.0

[node name="Defence" type="Control" parent="Hud_inGame"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -87.5
offset_top = -185.0
offset_right = 87.5
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("32_jun1v")

[node name="Speedometer" type="Control" parent="Hud_inGame"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -185.0
offset_right = 150.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("33_vc6ja")

[node name="Power" type="Control" parent="Hud_inGame"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -185.0
offset_right = 150.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("34_vbce2")

[node name="Icons" type="Control" parent="Hud_inGame" node_paths=PackedStringArray("grid_container")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -40.0
offset_right = 410.0
offset_bottom = -10.0
grow_vertical = 0
script = ExtResource("37_cy36v")
grid_container = NodePath("Icons")

[node name="Icons" type="GridContainer" parent="Hud_inGame/Icons"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 67.0
offset_right = 248.0
grow_horizontal = 2
grow_vertical = 2
columns = 10

[node name="Resource_Monitor" type="TextureRect" parent="Hud_inGame"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -278.0
offset_right = 66.0
offset_bottom = -10.0
grow_vertical = 0
texture = ExtResource("41_ywcr7")
expand_mode = 1
stretch_mode = 4

[node name="prg_resource" type="ProgressBar" parent="Hud_inGame/Resource_Monitor"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 14.0
offset_top = -24.0
offset_right = 234.0
offset_bottom = 3.0
grow_vertical = 0
rotation = -1.5708
max_value = 1.0
step = 0.001

[node name="prg_level" type="ProgressBar" parent="Hud_inGame"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -337.0
offset_top = -17.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
max_value = 1.0
show_percentage = false

[node name="CrossHairs" type="CenterContainer" parent="Hud_inGame"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("30_aima4")

[node name="txtr_weapon_icon" type="TextureRect" parent="Hud_inGame"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -37.5
offset_top = -317.0
offset_right = 37.5
offset_bottom = -242.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("32_4udya")
expand_mode = 1

[node name="lbl_weapon_name" type="Label" parent="Hud_inGame"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -72.0
offset_top = -236.0
offset_right = 72.0
offset_bottom = -211.0
grow_horizontal = 2
grow_vertical = 0
text = "weapon title"
horizontal_alignment = 1

[node name="lbl_shots_left" type="Label" parent="Hud_inGame"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -72.0
offset_top = -209.0
offset_right = 72.0
offset_bottom = -184.0
grow_horizontal = 2
grow_vertical = 0
text = "act / cap"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Hud_inGame"]
layout_mode = 1
offset_right = 165.0
offset_bottom = 46.0
texture = ExtResource("34_cfqyc")
expand_mode = 1

[node name="lbl_game_mode" type="Label" parent="Hud_inGame"]
layout_mode = 1
offset_left = 8.0
offset_top = 4.0
offset_right = 287.0
offset_bottom = 53.0
text = "Battle Mode
"

[node name="lbl_shields" type="Label" parent="Hud_inGame"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -69.0
offset_top = -127.0
offset_right = 75.0
offset_bottom = -102.0
grow_horizontal = 2
grow_vertical = 0
text = "0.0"
horizontal_alignment = 1

[node name="lbl_armor" type="Label" parent="Hud_inGame"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -69.0
offset_top = -109.0
offset_right = 75.0
offset_bottom = -84.0
grow_horizontal = 2
grow_vertical = 0
text = "0.0"
horizontal_alignment = 1

[node name="lbl_health" type="Label" parent="Hud_inGame"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -69.0
offset_top = -92.0
offset_right = 75.0
offset_bottom = -67.0
grow_horizontal = 2
grow_vertical = 0
text = "0.0"
horizontal_alignment = 1

[node name="lbl_score" type="Label" parent="Hud_inGame"]
layout_mode = 1
offset_left = 2.0
offset_top = 46.0
offset_right = 102.0
offset_bottom = 69.0

[node name="lbl_falls" type="Label" parent="Hud_inGame"]
layout_mode = 1
offset_left = 2.0
offset_top = 69.0
offset_right = 102.0
offset_bottom = 92.0

[node name="lbl_vanquishes" type="Label" parent="Hud_inGame"]
layout_mode = 1
offset_left = 2.0
offset_top = 92.0
offset_right = 102.0
offset_bottom = 115.0

[node name="lbl_level" type="Label" parent="Hud_inGame"]
layout_mode = 1
offset_left = 2.0
offset_top = 115.0
offset_right = 102.0
offset_bottom = 138.0

[node name="txt_messages" type="TextEdit" parent="Hud_inGame"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -336.0
offset_top = -219.0
offset_right = -10.0
offset_bottom = -24.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 10
text = "this is some text"

[node name="HUD_Creative" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
